--- a/src/styles/data-tabs.scss
+++ b/src/styles/data-tabs.scss
@@ -13,7 +13,7 @@
         position: relative;
         & > p {
           margin: 0px;
-          font-size: 14px;
+          font-size: 27px;
         }
         & > span {
           position: absolute;
@@ -21,7 +21,7 @@
           top: 0px;
           padding: 2px 8px;
           border-radius: 4px;
-          font-size: 12px;
+          font-size: 15px;
           background: rgba(255, 255, 255, 0.3);
         }
       }
@@ -30,6 +30,7 @@
           margin: 0;
           font-size: 32px;
           line-height: 60px;
+          padding-left: 60px;
         }
       }
       .item-footer {
@@ -39,7 +40,7 @@
         }
         & > p {
           margin: 0px;
-          font-size: 12px;
+          font-size: 14px;
         }
       }
       .item-tip {
